# tim2-rs

./: Cargo.toml  README.md
assets/: image_panel000.tm2
cli/: Cargo.toml
cli/src/: error.rs  main.rs  shader.rs  sprite.rs  texture.rs  vbo.rs  vertex.rs
lib/: Cargo.toml  README.md
lib/src/: frame.rs  image.rs  lib.rs  pixel.rs
viewer/: Cargo.toml
viewer/src/: cli.rs  main.rs  viewer.rs
