[package]
name = "tim2-viewer"
version = "0.1.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"


[dependencies]
tim2 = { path = "../lib" }

iced = { path = "../../iced", features = ['image', 'debug'] }
iced_native = { path = "../../iced/native/" }
# iced = { git = "https://github.com/tarkah/iced", branch = "image-pane", features = ['image', 'debug'] }
# iced_native = { git = "https://github.com/tarkah/iced", branch = "image-pane" }

anyhow = "1.0"
glob = "0.3"
structopt = "0.3"